# guardian_angel

./: README.md
IBVS_controller/: CMakeLists.txt  package.xml
ga_pbvs/: CMakeLists.txt  CMakeLists.txt~  package.xml
ga_pbvs/launch/: pbvs_control.launch  position_control.launch
ga_pbvs/src/: image_position_control.cpp  pbvs_control.cpp
ga_vs/: CMakeLists.txt  package.xml
ga_vs/launch/: vs_control.launch
ga_vs/src/: vs_control.cpp
ibvs_controller/: CMakeLists.txt  CMakeLists.txt~  package.xml
ibvs_controller/launch/: auto_tracker.launch  ibvs_simulated.launch  position_control.launch
ibvs_controller/src/: IBVS.cpp  IBVS_long.cpp
models/: AscTec_Pelican.ttm  AscTec_Pelican_2.ttm  AscTec_Pelican_Kinematics.ttm  AscTec_Pelican_Kinematics_ROS.ttm  AscTec_Pelican_ROS.ttm
obstacles_detector/: CMakeLists.txt~  package.xml~
obstacles_detector/launch/: QR_detection_vrep.launch  nearest_point.launch  obstacles_vrep.launch  webcam.launch
obstacles_detector/src/: QR_code_detector.cpp~  blobs_detector.cpp  blobs_detector.cpp~  nearest_point.cpp  nearest_point.cpp~
scenes/: AscTec_Pelican_velocityControl.ttt  Nao_Pelican_square.ttt  obstacles_scenario.ttt  visual_servoing_pelican.ttt  visual_servoing_pelican_test.ttt  visual_tracking.ttt
scenes/Pursuit Evasion/: pursuitEvasionObstaclesNAO_Pelican.ttt  pursuitEvasionObstaclesNAO_Pelican_OneObstacle.ttt  pursuitEvasionObstaclesNAO_Pelican_wall.ttt
scenes/Square Tests/: Nao_Pelican_square.ttt  Nao_Pelican_square_obstacle.ttt  Nao_Pelican_square_test_kinematics.ttt
v-rep scenes/: visual_tracking.ttt
